--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
       <div class="skill-row">
         <img class="webdimg" src="images/devskill.gif" alt="devimg">
         <h3>Aspiring software developer</h3>
-        <p>Currently, I am proficient in data structures and algorithms, SQL, and MATLAB.. As well as front end development using HTML,CSS,Javascript,PHP and bootstrap.</p>
+        <p>Currently, I am proficient in data structures and algorithms, SQL, and MATLAB. As well as front end development using HTML,CSS,Javascript,PHP and bootstrap.</p>
       </div>
       <div class="skill-row">
         <img class="messiimg" src="images/messi.gif" alt="messi">
         <h3>Avid sports fan</h3>
-        <p>I enthusiastically follow Indian athletes in all of their major competitions. Football is my favourite sport to watch, and I will always be a cule and Messi fan. </p>
+        <p>I enthusiastically follow Indian athletes in all of their major competitions. Football is my favourite sport to watch, and I will always be a cule and a Messi fan. </p>
       </div>
     </div>
     <hr>
