--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <div class="top-container">
     <h1>I'm Dhruv</h1>
     <img class="top-cloud" src="images/cloud.png" alt="cloud">
-    <p>Student at Netaji Subhas University Of Technology</p>
+    <p><strong>Student at Netaji Subhas University Of Technology</strong></p>
     <img class="bottom-cloud" src="images/cloud.png" alt="cloud">
     <img src="images/mountain.png" alt="mountain">
   </div>
